--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
-    "start": "react-native start"
+    "start": "expo start"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
-    "expo": "~42.0.1",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.1",
-    "react": "16.13.1",
+    "expo": "^44",
+    "expo-splash-screen": "~0.14.1",
+    "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
+    "react": "^17",
     "react-dom": "16.13.1",
-    "react-native": "~0.64.1",
-    "react-native-azure-ad-2": "file:../",
+    "react-native": "^0.64.1",
+    "react-native-azure-ad-2": "^1.0.5",
     "react-native-dotenv": "^3.2.0",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-get-random-values": "^1.7.0",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-unimodules": "0.14.10",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-get-random-values": "~1.7.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-unimodules": "~0.15.0",
     "react-native-web": "^0.17.5"
   },
   "devDependencies": {
