--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
+    "@shedaltd/react-native-azure-ad-2": "^2.0.1",
+    "ad-b2c-react-native": "^1.1.5",
     "expo": "^44",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
@@ -16,7 +18,6 @@
     "react": "^17",
     "react-dom": "16.13.1",
     "react-native": "^0.64.1",
-    "react-native-azure-ad-2": "^1.0.5",
     "react-native-dotenv": "^3.2.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-get-random-values": "~1.7.0",
